<resources>
    <string name="log_tag">SmokyApp : %s</string>
    <string name="app_name">My Application</string>
    <string name="msg_token_fmt">InstanceID Token:%s</string>
    <string name="title_activity_trial_realm">TrialRealmActivity</string>
    <string name="project_name">プロジェクト名</string>
    <string name="project_language">言語</string>
    <string name="project_watchers">閲覧者数</string>
    <string name="issues">issues : %d</string>
    <string name="watchers">閲覧者 : %s</string>
    <string name="language">言語 : %s</string>
    <string name="updated_at">更新日 : %s</string>
    <string name="created_at">作成日 : %s</string>
    <string name="githubproject">GitHubProject</string>
    <string name="loadingText">PJ読み込み中</string>
    <string name="project_list">PJの詳細</string>
    <string name="clone_url">url : %s</string>
    <string name="pjDetailLoading">PJ詳細読み込み中</string>
    <string name="auth_email_text">E-mail Address</string>
    <string name="auth_password_text">Password</string>
    <string name="auth_button_text">アカウント作成</string>
    <string name="auth_fragment_label">アカウント情報入力Fragment</string>
    <string name="login_button_text">ログイン</string>
    <string name="fireStoreText">FireStore検証画面</string>
    <string name="fireStore_button_text">FireStoreに登録</string>
    <string name="fireStore_read_button_text">UsersDBの情報ログ表示</string>
</resources>
