<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
              xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              app:layout_behavior="@string/appbar_scrolling_view_behavior"
              tools:context=".FirebaseActivity"
              android:orientation="vertical">
    <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/auth_fragment_label" tools:layout_editor_absoluteY="8dp" tools:layout_editor_absoluteX="8dp"/>

    <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/auth_email"
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/EditText.Style"
            android:hint="@string/auth_email_text"
    />

    <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/auth_password"
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/EditText.Style"
            android:hint="@string/auth_password_text"
    />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <com.google.android.material.button.MaterialButton
                android:id="@+id/auth_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auth_button_text"
                android:layout_gravity="center"
        />

        <com.google.android.material.button.MaterialButton
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_button_text"
                android:layout_gravity="center"
        />




    </LinearLayout>

</LinearLayout>