<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="isLoading" type="boolean" />
    </data>

    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
                  android:orientation="vertical" android:background="@color/cardview_light_background">
        <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/loadingText"
                android:gravity="center"
                app:visibleGone="@{isLoading}"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:visibleGone="@{!isLoading}"
                android:orientation="vertical">

            <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
            android:gravity="center" android:text="@string/githubproject"/>

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/projectList"
                    android:contentDescription="@string/project_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layoutManager="LinearLayoutManager">
            </androidx.recyclerview.widget.RecyclerView>

        </LinearLayout>
    </LinearLayout>

</layout>